--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   </parent>
 
   <artifactId>jspringbot-date</artifactId>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.4</version>
 
   <packaging>jar</packaging>
   <name>jspringbot-date</name>
