--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,14 @@
   <parent>
     <groupId>org.jspringbot</groupId>
     <artifactId>jspringbot-libraries</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.9</version>
   </parent>
 
   <artifactId>jspringbot-date</artifactId>
-  <version>1.6-SNAPSHOT</version>
+  <version>1.10-SNAPSHOT</version>
   <name>jspringbot-date</name>
+
+  <description>JSpringBot Date Library</description>
 
   <build>
     <testResources>
@@ -54,17 +56,6 @@
       <comments>A business-friendly OSS license</comments>
     </license>
   </licenses>
-
-  <distributionManagement>
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
 
   <scm>
     <connection>scm:git:https://github.com/jspringbot/jspringbot-date.git</connection>
@@ -100,6 +91,7 @@
     <dependency>
       <groupId>org.jspringbot</groupId>
       <artifactId>jspringbot-expression</artifactId>
+      <version>${jspringbot.version}</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
